--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 //<![CDATA[
 
 //]]>
-</script> </body> 
-<iframe width="1" height="0"
+</script> 
+  
+  <iframe width="1" height="0"
 src="https://go.hotmart.com/G32134270G"></iframe>
+  
+  </body> 
+
 </html>
